--- a/client/android/.gitignore
+++ b/client/android/.gitignore
@@ -1,8 +1,8 @@
 .idea
-#*.iml
-#.gradle
-#/local.properties
-#.DS_Store
-#/build
-#/captures
-#.externalNativeBuild
+*.iml
+.gradle
+/local.properties
+.DS_Store
+/build
+/captures
+.externalNativeBuild
