--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -5,11 +5,12 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.secretproject.secretproject"
-        minSdkVersion 14
+        minSdkVersion 22
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -26,5 +27,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.google.android.gms:play-services:9.8.0'
+    compile 'com.android.support:multidex:1.0.0'
     testCompile 'junit:junit:4.12'
 }
