--- a/client/android/app/src/main/AndroidManifest.xml
+++ b/client/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
 
     <application
-        android:name="SecretProgject"
+        android:name=".SecretProgjectApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -34,7 +34,7 @@
         </activity>
 
         <activity
-            android:name=".MyPreferenceActivity"
+            android:name=".SettingsActivity"
             android:label="@string/settings_title">
         </activity>
 
